# everything_inlined_all_at_once

./: CMakeLists.txt  test.cpp  test.ll
annotate_alwaysinline/: CMakeLists.txt  pass.cpp  pass.h
